--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 body {
     background-color: #002D72;
 }
+
+button {
+    background-color: #002D72;
+    border-color: #FF5910;
+}
+
+h3 {
+    color: white;
+}
